--- a/.github/workflows/build-app1.yaml
+++ b/.github/workflows/build-app1.yaml
@@ -14,7 +14,7 @@ jobs:
             admin/helpers
       - run: |
           mkdir -p release/app1
-          cp -r admin/app1/ release/app1
+          cp -r admin/app1 release/app1
           cp -r admin/helpers release/app1/scripts
       - uses: actions/upload-artifact@v4
         with: 
