--- a/.github/workflows/deploy-app1.yaml
+++ b/.github/workflows/deploy-app1.yaml
@@ -1,1 +1,17 @@
 name: Deploy app1 to NAS
+on:
+  workflow_run:
+    workflows: ["App1 Build"]
+    types:
+      - completed
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+      with:
+        name: app1-release-${{ github.sha }}
+        run-id: ${{ github.event.workflow_run.id }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path: \\TOWER\allan\powershell-nas-app-test\app1
