print structure of dir where artifact is downloaded

--- a/.github/workflows/deploy-app1.yaml
+++ b/.github/workflows/deploy-app1.yaml
@@ -15,3 +15,7 @@ jobs:
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path: \\TOWER\allan\powershell-nas-app-test\app1
+      - name: Structure of download
+        run: |
+          ls -R \\TOWER\allan\powershell-nas-app-test\app1
+          pwd
